examples/test/testpolicy11257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11257
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key5: value15
      key40: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value39
          key45: value44
      podSelector:
        matchLabels:
          key48: value0
          key15: value34
